# sea-battle

./: docker-compose.yml  pyproject.toml
server_seabattle/: app.py  game_logic.py  map_example.py
server_seabattle/tests/: test_game_logic.py
templates/: map.html
